[TASK] Add soft wrap [FIX] Line number on Navigation mode

--- a/desktop/sources/links/main.css
+++ b/desktop/sources/links/main.css
@@ -44,6 +44,7 @@ body #operator.active { bottom:0px; }
 
 body.mobile navi { opacity:0; transition: opacity 10ms; }
 body.mobile #editor { width: 100vw; left: 5%; transition: left 200ms; transition-delay: 20ms; }
+body.mobile #number { width: 10vw; left: 0%; transition: left 200ms; transition-delay: 20ms; }
 body.mobile stats { width: 85%; left: 5%; transition: left 200ms; transition-delay: 20ms; }
 body.mobile div { width: 100vw; }
 body.mobile #operator { width: 85%; left: 5%; }
